# crawfishwikibot

./: .gitignore  README.md  config.toml.example  pyproject.toml  run  setup
crawfishbot/: __init__.py  __main__.py  main.py  wiki.py
