[project]
name = "crawfishbot"
version = "0.1.0"
description = "crawfishcomic Wiki helper bot"
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["pywikibot", "pytumblr", "mwparserfromhell", "requests", "pytz", "python-dateutil", "feedparser"]

[tool.ruff]
exclude = ["user-config.py", "user-password.py"]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "B", "D", "F", "I"]
ignore = ["D212", "D203", "D205", "D202"]
